--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "npm":"6.12.0",
+    "node":"13.0.1",
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
