--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines":{
     "npm":"6.12.0",
-    "node":"13.0.1",
+    "node":"13.0.1"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
